# verified-mortgage-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
lean/: Main.lean  MortgageVerifier.lean  lakefile.toml
lean/MortgageVerifier/: Checker.lean  Invariants.lean  Parser.lean  Theorems.lean  Types.lean
schemas/: decision_record.json  execution_trace.json
scripts/: generate_schema.py
src/verified_mortgage_agent/app/: api.py  cli.py
src/verified_mortgage_agent/domain/: enums.py  models.py  validators.py
src/verified_mortgage_agent/lean_bridge/: __init__.py  config.py  result.py  runner.py  synthesis.py
src/verified_mortgage_agent/orchestrator/: config.py  graph.py  prompts.py  runner.py  state.py  tools.py
src/verified_mortgage_agent/record/: design_session_io.py  io.py  models.py  schema.py
src/verified_mortgage_agent/trace/: io.py  models.py  schema.py
tests/: conftest.py
tests/domain/: test_models.py  test_validators.py
tests/fixtures/: sample_goal.json  sample_record_dti_violation.json  sample_record_valid.json  sample_situation.json
tests/fixtures/predatory/: nj_covered_loan_no_disclosure.json  nj_discount_points_excess.json  nj_high_cost_loan_direct_approve.json  (+25 more)
tests/integration/: test_design_end_to_end.py  test_lean_smoke.py  test_predatory_lean.py
tests/lean_bridge/: test_predatory_fixtures.py  test_runner.py  test_synthesis.py
tests/orchestrator/: test_agents.py  test_config.py  test_router.py
tests/record/: test_design_session_models.py  test_io.py  test_models.py
tests/trace/: test_io.py  test_models.py
(+7 files in other folders)
