[project]
name = "verified-mortgage-agent"
version = "0.1.0"
description = "LLM-driven mortgage application routing with Lean 4 formal verification"
requires-python = ">=3.11"

dependencies = [
    # LangGraph multi-agent orchestration
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain>=0.3.0",
    # LLM provider adapters
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    # Data models and validation
    "pydantic>=2.7.0",
    # HTTP client (used by LangChain providers and FastAPI test client)
    "httpx>=0.27.0",
    # API layer
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # CLI
    "typer>=0.12.0",
    # Environment variable loading
    "python-dotenv>=1.0.1",
    # Structured logging
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.12.0",
    "pre-commit>=3.6.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
vma = "verified_mortgage_agent.app.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/verified_mortgage_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = ["integration: requires live Lean binary and LLM API key"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["B", "C", "E", "F", "W", "I", "Q"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.11"
